# candfans-post-analyzer

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  render.yaml
application/: asgi.py  gunicorn_conf.py  urls.py
application/modules/: exceptions.py
application/modules/analyzer/: converter.py  domain_models.py  service.py
application/modules/analyzer/migrations/: 0001_initial.py  0002_candfansuser_created_at_candfansuser_updated_at_and_more.py  (+22 more)
application/modules/candfans_gateway/: domain_models.py  service.py
application/modules/manage/: service.py
application/settings/: __init__.py  base.py  local.py  production.py
application/static/js/: graph.js
application/staticfiles/: staticfiles.json
application/staticfiles/js/: graph.js
application/submodule/: sql.py
application/templates/: index.j2  user.j2  user_not_found.j2  user_year_summary.j2
application/templates/users/: analyze1.j2  info.j2  monthly_stats.j2  plan_stats.j2
application/tests/factories/: candfans_user.py
application/tests/submodule/: test_sql.py
application/tests/usecase/: test_plans.py  test_users.py
application/tests/views/: test_candfans_user.py
application/usecase/: plans_case.py  stats_case.py  users.py  users_case.py
application/views/: api.py  candfans_user.py  index.py
candfans_post_analyzer/: asgi.py  wsgi.py
candfans_post_analyzer/settings/: base.py
docker/app/: .bashrc  Dockerfile  entrypoint.dev.sh  entrypoint.sh  run.sh  run_worker.sh
docker/nginx/: Dockerfile  default.conf  dev.conf  entrypoint.sh  prod.conf.template
(+50 files in other folders)
