[tool.poetry]
name = "candfans-post-analyzer"
version = "0.1.0"
description = ""
authors = ["komanushi <155377273+komanushi@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg = "^3.1.18"
candfans-client = "^2.0.0"
pydantic = "^2.6.3"
factory-boy = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
